# ai_app

./: .env  README.md  main.py  pyproject.toml
config/: config.py
controller/: openai_controller.py  openai_schema.py
service/: document_search_service.py  openai_service.py
utils/: file_reader.py
