[tool.poetry]
name = "ai-app"
version = "0.1.0"
description = ""
authors = ["Ananthu T <extern.thonnath_ananthu@investmentdataservices.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.30.6"
fastapi = "^0.114.0"
openai = "^1.44.0"
pandas = "^2.2.2"
pypdf2 = "^3.0.1"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
